fixed overflow of newsletter-title

--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -24,7 +24,7 @@
     max-width: 731px
     margin: auto
   &-title
-    max-width: 242px
+    max-width: 300px
     overflow-wrap: break-word
     color: $light
     font-style: normal
